bk_ida/gccida/c3/fixup_var_refs_1
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2396:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode promoted_mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2426:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2458:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v65; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2460:4: error: expected ';' after expression
rtx v67; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2460:5: error: use of undeclared identifier 'v67'
rtx v67; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2462:4: error: expected ';' after expression
rtx v69; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2462:5: error: use of undeclared identifier 'v69'
rtx v69; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2465:4: error: expected ';' after expression
rtx v72; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2465:5: error: use of undeclared identifier 'v72'
rtx v72; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2469:4: error: expected ';' after expression
rtx v76; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2469:5: error: use of undeclared identifier 'v76'
rtx v76; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2471:4: error: expected ';' after expression
rtx v78; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2471:5: error: use of undeclared identifier 'v78'
rtx v78; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2472:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v79; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2475:4: error: expected ';' after expression
rtx v82; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2475:5: error: use of undeclared identifier 'v82'
rtx v82; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2477:4: error: expected ';' after expression
rtx v84; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2477:5: error: use of undeclared identifier 'v84'
rtx v84; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/function.c:2478:4: error: expected ';' after expression
rtx v85; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_1/src/obj/function.o] Error 1
